--- a/templates/projects.html
+++ b/templates/projects.html
@@ -45,6 +45,56 @@
   {% endfor %}  
   </div>
 
+  <!--div class="card mx-5 mt-6">
+    <div class="card-content">
+      <p class="title is-4">
+        SKIPPER: SKIll Privacy Policy cleanER
+      </p>
+      <p class="subtitle is-6">
+        Fuman Xie
+      </p>
+    </div>
+    <footer class="card-footer">
+      <p class="card-footer-item">
+        <span>
+          View the <a>paper</a>
+        </span>
+      </p>
+      <p class="card-footer-item">
+        <span>
+          Checkout the <a>code</a>
+        </span>
+      </p>
+    </footer>
+  </div>
+
+  <div class="card mx-5 mt-6">
+    <div class="card-content">
+      <p class="title is-4">
+        U2-I2: An one-stop solution to explore user unresettable identifiers (UUIs) leakage on your Android smartphone.
+      </p>
+      <p class="subtitle is-6">
+        Mark Meng, Qing Zhang, Guangshuai Xia, Yuwei Zheng, Yanjun Zhang, Guangdong Bai, Zhi Liu, Sin Gee Teo, Jin Song Dong
+      </p>
+    </div>
+    <footer class="card-footer">
+      <p class="card-footer-item">
+        <span>
+          Visit the <a href="https://uq-trust-lab.github.io/u2i2/">website</a>
+        </span>
+      </p>
+      <p class="card-footer-item">
+        <span>
+          View the <a href="https://uq-trust-lab.github.io/u2i2/docs/public/paper/u2i2_ndss.pdf">paper</a>
+        </span>
+      </p>
+      <p class="card-footer-item">
+        <span>
+          Checkout the <a href="https://uq-trust-lab.github.io/u2i2/toolkit/">code</a>
+        </span>
+      </p>
+    </footer>
+  </div-->
 </section>
 
 {% endblock content %}
