--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -31,6 +31,14 @@
         </span>
       </a>
 
+      <a class="navbar-item" href="/projects/">
+        <span class="icon-text">
+          <!--span class="icon">
+            <i class="fa-solid fa-list-check"></i>
+          </span-->
+          <span><strong>Projects</strong></span>
+        </span>
+      </a>
    
 
       <a class="navbar-item" href="/cv/">
