--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,7 +5,8 @@
 <section class="section container px-1">
 
 
-  <h3 class="title is-3">Selected Research Projects (see SE-Project main page <a href="https://xie00059.github.io/SE-Projects/" target="_blank">here</a>)</h3>
+  <h3 class="title is-3">Selected Research Projects</h3> 
+  <p (see more details from <a href="https://xie00059.github.io/SE-Projects/" target="_blank">here</a>)</p>
   <hr>
 
 
