--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,14 @@
 	<link rel="shortcut icon" type="image/png" href="{{ config.base_url }}/img/favicon/favicon-96x96.png" size="96x96"/>
 
   <title>Fuman Xie's Home Page</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MF3XCTC01L"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	
+	  gtag('config', 'G-MF3XCTC01L');
+	</script>
   <link rel="stylesheet" href="/style.css">
 </head>
 
