--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
     <!--div class="columns is-desktop"-->
       <!-- div class="column is-10 is-offset-1" -->
       <p style="color: #fafafa">
-        &copy; 2023 Fuman Xie.<br>Powered by the academic theme for Zola using Bulma.
+        &copy; 2023 Fuman Xie.
       </p>
       <!--/div-->
     </div>
